just-for-fun opskrift bananmuffins
Opskrift banamuffins

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>just-for-fun</title>
+    <link rel="stylesheet" href="app.css">
   </head>
-  <body></body>
+  <body>
+    <h1>Opskrift</h1>
+    <h2>Bananmuffins</h2>
+    <p>Bananmuffins uden tilsat sukker</p>
+    <img src = "https://1drv.ms/u/s!AhBpnzdFfqQ8g3DC5zfZEgbPCRjY?e=ew8Sxk" alt="Bananmuffins">
+  </body>
 </html>
