just-for-fun Banamuffins
Opdatering af opskrift på Banamuffins

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h1>Opskrift</h1>
     <h2>Bananmuffins</h2>
     <p>Bananmuffins uden tilsat sukker</p>
-    <img src = "https://1drv.ms/u/s!AhBpnzdFfqQ8g3DC5zfZEgbPCRjY?e=ew8Sxk" alt="Bananmuffins">
+    <img src= "Bananmuffins.PNG" alt="Bananmuffins">
   </body>
 </html>
